# zipls

./: README.md  create_test_zip  pyproject.toml  setup.cfg  setup.py  zipls.py  zipls_tree.py
