[metadata]
name = zipls
version = 0.3.0
author = Matthew A. Clapp
author_email = Matthew Clapp <itsayellow+dev@gmail.com>
description = ls inside of a zip file
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itsayellow/zipls
keywords = zip, ls
classifiers =
    Development Status :: 3 Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
py_modules = zipls
install_requires =
    colorama

[options.entry_points]
console_scripts =
    zipls = zipls:cli
